Update app to use Dto